Modify response ServiceNotAvailableException

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,6 +5,6 @@ server:
        port: 5000
 #url consume service
 operations:
-           service: http:http://172.17.254.17/web-services-seta-apostar/api
+           service: http://172.17.254.17/web-services-seta-apostar/api
            serviceRecharge: /recarga/recargar
 
