Removing unused classes

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,6 +4,10 @@ operaciones:
     recargas:
       urlBase: /recarga
       urlRecargar: /recargar
+    betplay:
+      urlBase: /betplay
+      urlBetPlay: /asdasd
+      urlDos: /ased
 
 server:
   servlet:
