--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,10 @@
 			<version>20190722</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+		</dependency>
 
 	</dependencies>
 	<build>
