Create test,and end point consultaSubProductos

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,8 +7,7 @@ operaciones:
       urlConsultarSubproducto: /consultar-subproductos
     betplay:
       urlBase: /betplay
-      urlBetPlay: /asdasd
-      urlDos: /ased
+      urlConsultaSubproductos: /consultar-subproductos
     recaudos:
       urlBase: /recaudo
       urlConsultarDepartamentos: /consultar-departamentos
