Test and develop service solicitarPin

--- a/src/main/resources/application-dev-betplay.yml
+++ b/src/main/resources/application-dev-betplay.yml
@@ -8,6 +8,7 @@ operaciones:
     betplay:
       urlBase: /betplay
       urlConsultaSubproductos: /consultar-subproductos
+      urlSolicitarPin: /solicitar-pin
 
     recaudos:
       urlBase: /recaudo
