Test and develop Service realizarRetiro

--- a/src/main/resources/application-dev-betplay.yml
+++ b/src/main/resources/application-dev-betplay.yml
@@ -9,6 +9,7 @@ operaciones:
       urlBase: /betplay
       urlConsultaSubproductos: /consultar-subproductos
       urlSolicitarPin: /solicitar-pin
+      urlRealizarRetiro: /realizar-retiro
 
     recaudos:
       urlBase: /recaudo
