--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -11,6 +11,8 @@ operaciones:
     betplay:
       urlBase: /betplay
       urlConsultaSubproductos: /consultar-subproductos
+      urlSolicitarPin: /solicitar-pin
+      urlRealizarRetiro: /realizar-retiro
     recaudos:
       urlBase: /recaudo
       urlConsultarDepartamentos: /consultar-departamentos
