Test and develop Service realizar recaudos

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -13,6 +13,7 @@ operaciones:
       urlConsultaSubproductos: /consultar-subproductos
       urlSolicitarPin: /solicitar-pin
       urlRealizarRetiro: /realizar-retiro
+      urlRealizarRecaudo: /realizar-recaudo
     recaudos:
       urlBase: /recaudo
       urlConsultarDepartamentos: /consultar-departamentos
