--- a/src/main/resources/application-dev-betplay.yml
+++ b/src/main/resources/application-dev-betplay.yml
@@ -10,6 +10,7 @@ operaciones:
       urlConsultaSubproductos: /consultar-subproductos
       urlSolicitarPin: /solicitar-pin
       urlRealizarRetiro: /realizar-retiro
+      urlRealizarRecaudo: /realizar-recaudo
 
     recaudos:
       urlBase: /recaudo
