--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -25,6 +25,10 @@ operaciones:
       urlBase: /resultado-sorteos
       urlConsultarResultados: /consultar-resultado-sorteos
       urlConsultarResultadosSemanal: /consultar-resultado-sorteos-semanal
+    paquetesMoviles:
+      urlBase: /paquetes-moviles
+      urlConsultaSubProductos: /consultar-subproductos-paquetes
+      urlConsultaPaquetes: /consultar-paquetes
 distribuidor:
   identificador: 8000015206
   usuario-id: 8000015206
